------------------------------------

2010-08-13: Version 0.0.1

- Initial revision.

2010-08-20: Version 0.0.2

- Added support for Saunavisio.
- Moved all setup options into separate 'elvis.conf' file.
- Fixed localization in setup inputs.
- Added a validation for non-empty username and password
  for the main menu entry.
- Tweaked ringbuffer limits.

2010-10-03: Version 0.0.3

- Added confirmation prompts for deletions.
- Added a setup option for secure connections.
- Fixed a translation typo (Thanks to Antti Seppälä).
- Optimized skipping by reusing existing CURL connection
  (Thanks to Antti Seppälä).
- Fixed CURL multithreading issues (Thanks to Antti Seppälä).
- Added missing replaying status changes.
- Tweaked skip durations of green/yellow (+-60s) and 1/3
  (+-20s) keys in replaying mode.
- Mapped 4/6 (+-5min) and 7/9 (+-15min) keys for longer
  skips in replay mode.

2010-10-10: Version 0.0.4

- Added functionality to abort current fetching.
- Added 'ABRT' and 'LIST' commands for SVDRP interface.
- Tweaked trickplay functionality.
- Enabled jump (red) key in replay mode.
- Fixed possible locking problems in fetcher.
- Added a progress meter for fetching.
- Added Makefile depencency for objects.
- Documented Antti Seppälä as co-author.

2010-10-31: Version 0.0.5

- Updated widget API.
- Added a return back to the recordings menu after exiting
  the player.
- Modified menu layouts.
- Added support for adding/removing timers via service and
  SVDRP interfaces.
- Fixed a possible crash in shutdown.
- Added support for widget data caching.
- Added resume support for recordings via resume.conf.
- Added session support via cookie.conf.
- Added build support with a static json-c library.

2010-11-17: Version 0.0.6

- Updated widget API.
- Fixed some locking issues.
- Increased the player buffer sizes.
- Speeded up the initial recordings menu.
- Fixed CURL data corruption.
- Fixed Saunavisio relogin.

201x-xx-xx: Version 0.1.0

- Simplified EPG data fetching.